Added /dev/ttyS[1-9] devices to the list for Windows WSL COM port mapping

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(ARDUINO_DEFAULT_BOARD "${ARDUINO_FIRST_PROGRAMMER}" CACHE STRING "Programmer
 set_property(CACHE ARDUINO_DEFAULT_PROGRAMMER PROPERTY STRINGS ${ARDUINO_PROGRAMMER_LIST})
 
 # set serial port from list of available ports
-file(GLOB AVAILABLE_SERIAL_PORTS "/dev/ttyUSB*" "/dev/ttyACM*" "/dev/ttyAMA*")
+file(GLOB AVAILABLE_SERIAL_PORTS "/dev/ttyUSB*" "/dev/ttyACM*" "/dev/ttyAMA*" "/dev/ttyS[1-9]")
 list(GET AVAILABLE_SERIAL_PORTS 0 FIRST_SERIAL_PORT)
 set(ARDUINO_DEFAULT_PORT "${FIRST_SERIAL_PORT}" CACHE STRING "Serial port")
 set_property(CACHE ARDUINO_DEFAULT_PORT PROPERTY STRINGS ${AVAILABLE_SERIAL_PORTS})
