towards a lightweight WS2811 implementation

--- a/libraries/AvrTL/CMakeLists.txt
+++ b/libraries/AvrTL/CMakeLists.txt
@@ -5,6 +5,6 @@ generate_arduino_library(
 	AvrTL
     SRCS AvrTLPin.cpp
     HDRS AvrTL.h AvrTLPin.h AvrTLEEPROM.h timer.h
-    NO_AUTOLIBS MANUAL
+    MANUAL
 	)
 
