DS1307 RTC working

--- a/sketches/CMakeLists.txt
+++ b/sketches/CMakeLists.txt
@@ -287,8 +287,16 @@ generate_avr_firmware(
 generate_avr_firmware(
 	WaveLight
     SRCS WaveLight.cpp
-    LIBS BasicIO PCD8544 WS2811 DS1302 AvrTL AvrApp
+    LIBS BasicIO PCD8544 WS2811 uRTCLib AvrTL AvrApp
     )
 
-    
+#====================================================================#
+# Simple input/output test for HW Serial port
+#====================================================================#
+generate_avr_firmware(
+	RTCSerial
+    SRCS RTCSerial.cpp
+    LIBS HWSerial BasicIO uRTCLib WireI2C AvrTL AvrApp
+    )
+   
 endif()
