--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -20,3 +20,6 @@ add_subdirectory(RFSniffer)
 add_subdirectory(Linkuino)
 add_subdirectory(PCD8544)
 add_subdirectory(DS1302)
+add_subdirectory(Wire)
+add_subdirectory(uRTCLib)
+
