--- a/libraries/AvrApp/CMakeLists.txt
+++ b/libraries/AvrApp/CMakeLists.txt
@@ -2,9 +2,9 @@
 # AVR main definition, setup and loop functions declaration.
 # To be used for pure avr (no Wiring/Arduino) apps
 #====================================================================#
-generate_arduino_library(
+generate_avr_library(
 	AvrApp
     SRCS AvrApp.cpp
     HDRS AvrApp.h
-    NO_AUTOLIBS MANUAL
+    BOARDS arduino nano attiny84 attiny85
 	)
