--- a/libraries/BasicIO/CMakeLists.txt
+++ b/libraries/BasicIO/CMakeLists.txt
@@ -2,10 +2,10 @@
 # LCD1602 interface. compatible with ByteStream interface, may be used
 # with a PrintStream
 #====================================================================#
-generate_arduino_library(
+generate_avr_library(
 	BasicIO
 	SRCS PrintStream.cpp
     HDRS ByteStream.h InputStream.h PrintStream.h
     LIBS AvrTL
-    NO_AUTOLIBS MANUAL
+    BOARDS arduino nano attiny84 attiny85
 	)
