--- a/libraries/TimeScheduler/CMakeLists.txt
+++ b/libraries/TimeScheduler/CMakeLists.txt
@@ -2,10 +2,9 @@
 # LCD1602 interface. compatible with ByteStream interface, may be used
 # with a PrintStream
 #====================================================================#
-generate_arduino_library(
+generate_avr_library(
 	TimeScheduler
-	SRCS TimeScheduler.cpp
     HDRS TimeScheduler.h
     LIBS AvrTL
-    NO_AUTOLIBS MANUAL
+    ALL_BOARDS
 	)
