--- a/sketches/CMakeLists.txt
+++ b/sketches/CMakeLists.txt
@@ -5,7 +5,7 @@
 generate_avr_firmware(
 	StepMotorTest
 	SRCS StepMotorTest.cpp
-	LIBS BasicIO AvrTL AvrApp
-	BOARDS nano attiny84
+	LIBS SoftSerial BasicIO AvrTL AvrApp
+	ALL_BOARDS
 	)
 
