--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 # I target a recent cmake, it shouldn't be a problem on a dev machine
 
 cmake_minimum_required(VERSION 3.26)
-project(TiDuino C CXX)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS NO)
 
 # Use AVR GCC toolchain
 set(CMAKE_SYSTEM_NAME Generic)
@@ -12,8 +8,17 @@ set(CMAKE_CXX_COMPILER avr-g++)
 set(CMAKE_C_COMPILER avr-gcc)
 set(CMAKE_ASM_COMPILER avr-gcc)
 
+project(TiDuino C CXX)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS NO)
+
 # add a macro for build timestamp
 string(TIMESTAMP BUILD_TIMSESTAMP "%Y%j%HUL")
+
+unset(AVAILABE_MCU_BOARDS)
+
+set(SERIAL_PORT "/dev/ttyUSB0" CACHE STRING "Serial port")
 
 macro(add_avr_board BOARDNAME F_CPU MCU BAUD PROG_TYPE E_FUSE H_FUSE L_FUSE LOCK_BIT)
 
@@ -35,21 +40,32 @@ macro(add_avr_board BOARDNAME F_CPU MCU BAUD PROG_TYPE E_FUSE H_FUSE L_FUSE LOCK
   set(${BOARDNAME}_H_FUSE ${H_FUSE}) # 0xda
   set(${BOARDNAME}_L_FUSE ${L_FUSE}) # 0xfd
   set(${BOARDNAME}_LOCK_BIT ${LOCK_BIT}) # 0xff
+  
+  list(APPEND AVAILABE_MCU_BOARDS ${BOARDNAME})
 endmacro()
 
 
 # add a program firmware
 function(generate_avr_firmware SKETCH_NAME)
 
-  set(options)
+  set(options ALL_BOARDS)
   set(oneValueArgs)
   set(multiValueArgs SRCS LIBS BOARDS)
   cmake_parse_arguments(PARSE_ARGV 0 ${SKETCH_NAME} "${options}" "${oneValueArgs}" "${multiValueArgs}")
+
+  if(${SKETCH_NAME}_ALL_BOARDS)
+    set(${SKETCH_NAME}_BOARDS ${AVAILABE_MCU_BOARDS})
+  endif()
   message(STATUS "sketch ${SKETCH_NAME} : SRCS=${${SKETCH_NAME}_SRCS} , LIBS=${${SKETCH_NAME}_LIBS} , BOARDS=${${SKETCH_NAME}_BOARDS}")
 
   foreach(BOARD ${${SKETCH_NAME}_BOARDS})
 
-    message(STATUS "Build ${SKETCH_NAME}_${BOARD} : F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} MCU=${${BOARD}_MCU} L_FUSE=${${BOARD}_L_FUSE} H_FUSE=${${BOARD}_H_FUSE} E_FUSE=${${BOARD}_E_FUSE} LOCK_BIT=${${BOARD}_LOCK_BIT}")
+   unset(${SKETCH_NAME}_${BOARD}_LIBS)
+    foreach(LIB ${${SKETCH_NAME}_LIBS})
+      list(APPEND ${SKETCH_NAME}_${BOARD}_LIBS ${LIB}_${BOARD})
+    endforeach()
+
+    message(STATUS "Build ${SKETCH_NAME}_${BOARD} : LIBS=${${SKETCH_NAME}_${BOARD}_LIBS} F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} MCU=${${BOARD}_MCU} L_FUSE=${${BOARD}_L_FUSE} H_FUSE=${${BOARD}_H_FUSE} E_FUSE=${${BOARD}_E_FUSE} LOCK_BIT=${${BOARD}_LOCK_BIT}")
 
     # Create one target
     add_executable(${SKETCH_NAME}_${BOARD} ${${SKETCH_NAME}_SRCS})
@@ -57,23 +73,21 @@ function(generate_avr_firmware SKETCH_NAME)
     target_compile_definitions(${SKETCH_NAME}_${BOARD} PRIVATE F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} BUILD_TIMSESTAMP=${BUILD_TIMSESTAMP})
     target_compile_options(${SKETCH_NAME}_${BOARD} PRIVATE
         -mmcu=${${BOARD}_MCU} # MCU
-        -std=c++11 # C++ dialect
+        -std=gnu++11 # C++ dialect
         -Os # optimize
         -Wall # enable warnings
-        -Wno-main
-        -Wundef
-        -Werror
-        -Wfatal-errors
-        -Wl,--relax,--gc-sections
-        -fshort-enums
-        -ffunction-sections
-        -fdata-sections
-        -fno-split-wide-types
-        -fno-tree-scev-cprop
+        -fpermissive 
+        -fno-exceptions 
+        -ffunction-sections 
+        -fdata-sections 
+        -fno-threadsafe-statics 
+        -Wno-error=narrowing 
+        -MMD 
+        -flto
         )
     target_include_directories(${SKETCH_NAME}_${BOARD} PRIVATE ${PROJECT_SOURCE_DIR}/libraries)
 
-    target_link_libraries(${SKETCH_NAME}_${BOARD} PRIVATE ${${SKETCH_NAME}_LIBS})
+    target_link_libraries(${SKETCH_NAME}_${BOARD} PRIVATE ${${SKETCH_NAME}_${BOARD}_LIBS})
 
     add_custom_target(${SKETCH_NAME}_${BOARD}_strip COMMAND avr-strip ${SKETCH_NAME}_${BOARD} -o ${SKETCH_NAME}_${BOARD}.elf DEPENDS ${SKETCH_NAME}_${BOARD} BYPRODUCTS ${SKETCH_NAME}_${BOARD}.elf)
     add_custom_target(${SKETCH_NAME}_${BOARD}_hex COMMAND avr-objcopy -R .eeprom -O ihex ${SKETCH_NAME}_${BOARD}.elf ${SKETCH_NAME}_${BOARD}.hex DEPENDS ${SKETCH_NAME}_${BOARD}_strip BYPRODUCTS ${SKETCH_NAME}_${BOARD}.hex)
@@ -81,7 +95,7 @@ function(generate_avr_firmware SKETCH_NAME)
 
     # Upload the firmware with avrdude
     add_custom_target(${SKETCH_NAME}_${BOARD}_upload
-      COMMAND avrdude -c ${${BOARD}_PROG_TYPE} -p ${${BOARD}_MCU} -U flash:w:${SKETCH_NAME}_${BOARD}.hex -U eeprom:w:${SKETCH_NAME}_${BOARD}.eep -U lfuse:w:${${BOARD}_L_FUSE}:m -U hfuse:w:${${BOARD}_H_FUSE}:m -U efuse:w:${${BOARD}_E_FUSE}:m -U lock:w:${${BOARD}_LOCK_BIT}:m
+      COMMAND avrdude -P ${SERIAL_PORT} -c ${${BOARD}_PROG_TYPE} -p ${${BOARD}_MCU} -U flash:w:${SKETCH_NAME}_${BOARD}.hex -U eeprom:w:${SKETCH_NAME}_${BOARD}.eep -U lfuse:w:${${BOARD}_L_FUSE}:m -U hfuse:w:${${BOARD}_H_FUSE}:m -U efuse:w:${${BOARD}_E_FUSE}:m -U lock:w:${${BOARD}_LOCK_BIT}:m
       DEPENDS ${SKETCH_NAME}_${BOARD}_hex ${SKETCH_NAME}_${BOARD}_eeprom)
 
   endforeach()
@@ -90,49 +104,56 @@ endfunction()
 
 function(generate_avr_library LIBRARY_NAME)
 
-  set(options MANUAL NO_AUTOLIBS)
+  set(options ALL_BOARDS)
   set(oneValueArgs)
-  set(multiValueArgs RCS HDRS LIBS BOARDS)
+  set(multiValueArgs SRCS HDRS LIBS BOARDS)
   cmake_parse_arguments(PARSE_ARGV 0 ${LIBRARY_NAME} "${options}" "${oneValueArgs}" "${multiValueArgs}")
-  message(STATUS "library ${LIBRARY_NAME} : SRCS=${${LIBRARY_NAME}_SRCS} , HDRS=${${LIBRARY_NAME}_HDRS} , LIBS=${${LIBRARY_NAME}_LIBS} , BOARDS=${${LIBRARY_NAME}_BOARDS} , MANUAL=${${LIBRARY_NAME}_MANUAL}, NO_AUTOLIBS=${${LIBRARY_NAME}_NO_AUTOLIBS}")
+  if(${LIBRARY_NAME}_ALL_BOARDS)
+    set(${LIBRARY_NAME}_BOARDS ${AVAILABE_MCU_BOARDS})
+  endif()
+  message(STATUS "library ${LIBRARY_NAME} : SRCS=${${LIBRARY_NAME}_SRCS} , HDRS=${${LIBRARY_NAME}_HDRS} , LIBS=${${LIBRARY_NAME}_LIBS} , BOARDS=${${LIBRARY_NAME}_BOARDS}")
 
   # Create one target
   foreach(BOARD ${${LIBRARY_NAME}_BOARDS})
 
+    unset(${LIBRARY_NAME}_${BOARD}_LIBS)
+    foreach(LIB ${${LIBRARY_NAME}_LIBS})
+      list(APPEND ${LIBRARY_NAME}_${BOARD}_LIBS ${LIB}_${BOARD})
+    endforeach()
+
     if(${LIBRARY_NAME}_SRCS)
-      message(STATUS "add ${LIBRARY_NAME}_${BOARD} library : F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} MCU=${${BOARD}_MCU} L_FUSE=${${BOARD}_L_FUSE} H_FUSE=${${BOARD}_H_FUSE} E_FUSE=${${BOARD}_E_FUSE} LOCK_BIT=${${BOARD}_LOCK_BIT}")
+      message(STATUS "add ${LIBRARY_NAME}_${BOARD} library : LIBS=${${LIBRARY_NAME}_${BOARD}_LIBS} F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} MCU=${${BOARD}_MCU} L_FUSE=${${BOARD}_L_FUSE} H_FUSE=${${BOARD}_H_FUSE} E_FUSE=${${BOARD}_E_FUSE} LOCK_BIT=${${BOARD}_LOCK_BIT}")
       add_library(${LIBRARY_NAME}_${BOARD} STATIC ${${LIBRARY_NAME}_SRCS})
       target_compile_definitions(${LIBRARY_NAME}_${BOARD} PRIVATE F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} BUILD_TIMSESTAMP=${BUILD_TIMSESTAMP})
       target_compile_options(${LIBRARY_NAME}_${BOARD} PUBLIC
-          -mmcu=${${BOARD}_MCU} # MCU
-          -std=c++11 # C++ dialect
-          -Os # optimize
-          -Wall # enable warnings
-          -Wno-main
-          -Wundef
-          -Werror
-          -Wfatal-errors
-          -Wl,--relax,--gc-sections
-          -fshort-enums
-          -ffunction-sections
-          -fdata-sections
-          -fno-split-wide-types
-          -fno-tree-scev-cprop
-          )
-      target_link_libraries(${LIBRARY_NAME}_${BOARD} PUBLIC ${${LIBRARY_NAME}_LIBS})
+        -mmcu=${${BOARD}_MCU} # MCU
+        -std=gnu++11 # C++ dialect
+        -Os # optimize
+        -Wall # enable warnings
+        -fpermissive 
+        -fno-exceptions 
+        -ffunction-sections 
+        -fdata-sections 
+        -fno-threadsafe-statics 
+        -Wno-error=narrowing 
+        -MMD 
+        -flto
+        )
+      target_include_directories(${LIBRARY_NAME}_${BOARD} PRIVATE ${PROJECT_SOURCE_DIR}/libraries)
+      target_link_libraries(${LIBRARY_NAME}_${BOARD} PUBLIC ${${LIBRARY_NAME}_${BOARD}_LIBS})
     else()
-      message(STATUS "add ${LIBRARY_NAME}_${BOARD} interface : F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} MCU=${${BOARD}_MCU} L_FUSE=${${BOARD}_L_FUSE} H_FUSE=${${BOARD}_H_FUSE} E_FUSE=${${BOARD}_E_FUSE} LOCK_BIT=${${BOARD}_LOCK_BIT}")
+      message(STATUS "add ${LIBRARY_NAME}_${BOARD} interface : LIBS=${${LIBRARY_NAME}_${BOARD}_LIBS} F_CPU=${${BOARD}_F_CPU} BAUD=${${BOARD}_BAUD} MCU=${${BOARD}_MCU} L_FUSE=${${BOARD}_L_FUSE} H_FUSE=${${BOARD}_H_FUSE} E_FUSE=${${BOARD}_E_FUSE} LOCK_BIT=${${BOARD}_LOCK_BIT}")
       add_library(${LIBRARY_NAME}_${BOARD} INTERFACE)
-      target_link_libraries(${LIBRARY_NAME}_${BOARD} INTERFACE ${${LIBRARY_NAME}_LIBS})
+      target_link_libraries(${LIBRARY_NAME}_${BOARD} INTERFACE ${${LIBRARY_NAME}_${BOARD}_LIBS})
     endif()
 
   endforeach()
 
 endfunction()
 
-add_avr_board(arduino 16000000UL m328p 19200 stk500v1 0x05 0xDA 0xFF 0x3F)
+#add_avr_board(arduino 16000000UL m328p 19200 stk500v1 0x05 0xDA 0xFF 0x3F)
 add_avr_board(nano 16000000UL atmega328p 57600 arduino 0x05 0xDA 0xFF 0x3F)
-add_avr_board(attiny84 8000000UL attiny84 19200 stk500v1 0xff 0xdf 0xe2 0x3F)
+#add_avr_board(attiny84 8000000UL attiny84 19200 stk500v1 0xff 0xdf 0xe2 0x3F)
 add_avr_board(attiny85 8000000UL attiny85 19200 stk500v1 0xff 0xdf 0xe2 0x3F)
 
 # finally, compile home made libraries
