--- a/libraries/SoftSerial/CMakeLists.txt
+++ b/libraries/SoftSerial/CMakeLists.txt
@@ -2,11 +2,10 @@
 # LCD1602 interface. compatible with ByteStream interface, may be used
 # with a PrintStream
 #====================================================================#
-generate_arduino_library(
-	SoftSerial
-	SRCS SoftSerial.cpp
+generate_avr_library(
+  SoftSerial
     HDRS SoftSerial.h
     LIBS TimeScheduler AvrTL
-    NO_AUTOLIBS MANUAL
-	)
+    ALL_BOARDS
+  )
 
